--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -6,7 +6,6 @@ gzip_min_length 1100;
 gzip_buffers     4 8k;
 gzip_proxied any;
 gzip_types
-  # text/html is always compressed by HttpGzipModule
   text/css
   text/javascript
   text/xml
@@ -28,24 +27,46 @@ gzip_vary           on;
 
 server {
     listen  <%= ENV['OPENSHIFT_NGINX_IP'] %>:<%= ENV['OPENSHIFT_NGINX_PORT'] %>;
+    # server_name  localhost;
     root    <%= ENV['OPENSHIFT_REPO_DIR'] %>/public;
 
-    # To enable CORS uncomment the following 4 lines
-    #add_header 'Access-Control-Allow-Origin' '*';
-    #add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, HEAD';
-    #add_header 'Access-Control-Allow-Credentials' 'true';
-    #add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept,Authorization';
-    
+    add_header Strict-Transport-Security max-age=691200;
+
     location / {
-        index  index.html index.htm index.php;
-        try_files $uri $uri/ /index.php?$query_string;
+        index  index.html  index.htm  index.php ;
+
+        try_files $uri $uri/ @rewrites;
+    }
+
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    location ~ /\.          { access_log off; log_not_found off; deny all; }
+    location ~ ~$           { access_log off; log_not_found off; deny all; }
+
+    # Set expires max on static file types
+    location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
+        access_log off;
+        log_not_found off;
+
+        # Some basic cache-control for static files to be sent to the browser
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
+
+    location @rewrites {
+        rewrite ^(.*)$ /index.php/$1 last;
     }
 
     # pass the PHP scripts to PHP-FPM
-    location ~ \.php$ {
+    # for only index.php requests, change next line 'location' for commented line below
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass unix:<%= ENV['OPENSHIFT_PHP_SOCKET'] %>;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_script_name;
         include <%= ENV['OPENSHIFT_NGINX_DIR'] %>/usr/nginx-<%= ENV['OPENSHIFT_NGINX_VERSION'] %>/conf/fastcgi_params;
     }
 }
+
+# opt-in to the future
+add_header "X-UA-Compatible" "IE=Edge,chrome=1";
