--- a/.openshift/fpm/php.ini.erb
+++ b/.openshift/fpm/php.ini.erb
@@ -868,7 +868,7 @@ default_socket_timeout = 60
 ;extension=php_imap.dll
 ;extension=php_interbase.dll
 ;extension=php_ldap.dll
-;extension=php_mbstring.dll
+extension=php_mbstring.dll
 ;extension=php_exif.dll      ; Must be after mbstring as it depends on it
 ;extension=php_mysql.dll
 ;extension=php_mysqli.dll
