--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -42,7 +42,7 @@ body {
   color: #555;
   border: 1px solid #ddd;
   text-shadow: 0 -1px 0 #eee;
-  box-shadow: inset 0 0 10px #a9a9a9;
+  box-shadow: inset -1px 1px 3px #a9a9a9;
 }
 #dashboard-section {
   padding-top: 30px;
