--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -9,7 +9,6 @@ html, body {
 
 body {
   padding-top: 52px;
-  padding-bottom: 52px;
 }
 
 #dashboard-container {
@@ -18,6 +17,7 @@ body {
 }
 
 #dashboard-sidebar {
+  position: fixed;
   padding: 0;
   height: 100%;
   background-image: linear-gradient(to top,#fff 0,#f8f8f8 100%);
@@ -30,6 +30,7 @@ body {
 
 #dashboard-content {
   padding: 0;
+  padding-bottom: 52px;
   h4 {
     .title-space(20px)
   }
