--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -64,3 +64,16 @@ body {
   margin-bottom: 0;
   border-radius: 0;
 }
+
+.modal-spinner {
+  display: none;
+}
+
+.modal-content .modal-spinner {
+  padding: 20px 0;
+  display: block;
+
+  img {
+    width: 50px;
+  }
+}
