--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -65,14 +65,13 @@ body {
   border-radius: 0;
 }
 
-.modal-spinner {
+#modal-spinner {
   display: none;
+  visibility: hidden;
 }
 
-.modal-content .modal-spinner {
+.modal-spinner-inner {
   padding: 20px 0;
-  display: block;
-
   img {
     width: 50px;
   }
