--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -76,3 +76,13 @@ body {
     width: 50px;
   }
 }
+
+#modalAlert {
+  display: none;
+}
+
+#login-modal {
+  #help-email, #help-password, #help-confirm, #help-name {
+    display: block;
+  }
+}
