--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -31,8 +31,27 @@ body {
 #dashboard-content {
   padding: 0;
   padding-bottom: 52px;
-  h4 {
+  h4.page-header {
     .title-space(20px)
+  }
+
+  #university-form-panel {
+    .panel-heading {
+      padding: 0;
+      a {
+        position: relative;
+        padding: 10px 5px;
+        display: block;
+        color: #ffffff;
+        font-size: 1.4em;
+      }
+      a i {
+        position: absolute;
+        vertical-align: middle;
+        right: 15px;
+        top: 13px;
+      }
+    }
   }
 }
 
